...
      android:hint="Password"
      android:importantForAutofill="yes"
      android:inputType="textPassword"
      android:maxLines="1" />

    <Button
      android:id="@+id/fixture_autofill_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      android:text="Request Autofill" />

    <Button
...
